# octaris

./: .gitignore  README.md  config.json  implementation_plan.md
backend/: pyproject.toml
backend/backend/: config.py  database.py  events.py  gcode_processor.py  main.py  models.py  queue_worker.py  serial_manager.py  slicer.py
backend/backend/routers/: extrusion.py  gcode.py  jog.py  print_control.py  serial.py  upload.py  ws.py
backend/tests/: conftest.py  test_database.py  test_gcode_processor.py  test_health.py  test_queue.py  test_serial.py
backend/tests/fixtures/: raw_sample.gcode
client/: electron-builder.yml  package-lock.json  package.json  tsconfig.web.tsbuildinfo
client/src/renderer/: index.html
client/src/renderer/src/: App.tsx  api.ts  types.ts
client/src/renderer/src/assets/: main.css
client/src/renderer/src/components/: ExtrusionSlider.tsx  GcodeInput.tsx  GcodePreview.tsx  GcodeUpload.tsx  JogPanel.tsx  PortSelector.tsx  PrintOverlay.tsx  ProgressBar.tsx  STLPreview.tsx  STLUpload.tsx  SerialLog.tsx  StartPrintButton.tsx  StatusBar.tsx  SyringeSelector.tsx  TimeRemaining.tsx
client/src/renderer/src/hooks/: useWebSocket.ts
client/src/renderer/src/screens/: PrintScreen.tsx  SetupScreen.tsx  TakeOverScreen.tsx
